feat: add authenticate client feature
